<resources>
    <string name="app_name">Doe OK</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Enter your username</string>
    <string name="prompt_password">Enter your password</string>
    <string name="prompt_full_name">Enter your full name</string>
    <string name="prompt_email">Enter your E-mail</string>
    <string name="prompt_title">Enter the review title</string>
    <string name="prompt_content">Enter the review here</string>
    <string name="prompt_rating">Select your rating</string>

    <string name="radio_option_1">1</string>
    <string name="radio_option_2">2</string>
    <string name="radio_option_3">3</string>
    <string name="radio_option_4">4</string>
    <string name="radio_option_5">5</string>

    <string name="desc_avatar">Avatar</string>
    <string name="desc_username">Username</string>
    <string name="desc_password">Password</string>
    <string name="desc_full_name">Full Name</string>
    <string name="desc_email">E-mail</string>

    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_submit">Submit</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="action_view_reviews">View Reviews</string>

    <string name="rest_name_ph">Restaurant Name</string>
    <string name="rest_unknown">The opening hours is currently unknown</string>
    <string name="rest_open">The place is now open</string>
    <string name="rest_close">The place is now closed</string>
    <string name="rest_distance_ph">~500m</string>
    <string name="rest_vicinity_ph">Restaurant vicinity</string>
    <string name="rest_rating_title">Rating:</string>
    <string name="rest_rating_ph">5</string>
    <string name="rest_rating_full">/5</string>
    <string name="rest_no_review">No one has written a review yet! Write your own now!</string>

    <string name="review_title_ph">Review Title</string>
    <string name="review_rest_ph">Restaurant Name</string>
    <string name="review_full_name_ph">Reviewer Review</string>
    <string name="review_rating_title">Rating:</string>
    <string name="review_rating_ph">5</string>
    <string name="review_rating_full">/5</string>
    <string name="review_datetime_ph">2019/12/26 09:00:00</string>
    <string name="review_content_ph">This is a review placeholder. This is a review placeholder. This is a review placeholder. This is a review placeholder. This is a review placeholder. This is a review placeholder. This is a review placeholder. This is a review placeholder. This is a review placeholder. This is a review placeholder. This is a review placeholder. This is a review placeholder. This is a review placeholder. This is a review placeholder. This is a review placeholder. This is a review placeholder.</string>

    <string name="welcome">"Welcome !"</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>

    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main_app">MainApp</string>
    <string name="title_register">Registration</string>
    <string name="title_my_reviews">My Reviews</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_map">Nearby Restaurants</string>
    <string name="menu_my_reviews">My Reviews</string>
</resources>
