<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/my_review_rest"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="-388dp"
        android:layout_marginRight="-388dp"
        android:text="@string/review_rest_ph"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/my_review_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_review_rest"
        android:layout_alignStart="@+id/my_review_rest"
        android:layout_alignLeft="@+id/my_review_rest"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="4dp"
        android:text="@string/review_title_ph" />

    <TextView
        android:id="@+id/my_review_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_review_rest"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_toStartOf="@+id/my_review_rating_full"
        android:layout_toLeftOf="@+id/my_review_rating_full"
        android:text="@string/review_rating_ph"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/my_review_rating_full"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/my_review_rating"
        android:layout_alignRight="@id/my_review_rest"
        android:layout_marginTop="0dp"
        android:text="@string/rest_rating_full" />

    <TextView
        android:id="@+id/my_review_rating_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/my_review_rating"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_toStartOf="@+id/my_review_rating"
        android:layout_toLeftOf="@+id/my_review_rating"
        android:text="@string/review_rating_title" />

    <TextView
        android:id="@+id/my_review_datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_review_title"
        android:layout_alignStart="@+id/my_review_title"
        android:layout_alignLeft="@+id/review_fullname"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/review_datetime_ph"
        android:textSize="10sp" />

</RelativeLayout>
