<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/review_box"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="#DDDDDD"
        android:clickable="true"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/review_title"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/review_box"
        android:layout_alignLeft="@+id/review_box"
        android:layout_alignTop="@+id/review_box"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="-388dp"
        android:layout_marginRight="-388dp"
        android:layout_toStartOf="@+id/review_box"
        android:layout_toLeftOf="@+id/review_box"
        android:text="@string/review_title_ph"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/review_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/review_title"
        android:layout_alignStart="@+id/review_title"
        android:layout_alignLeft="@+id/review_title"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="4dp"
        android:text="@string/review_full_name_ph" />

    <TextView
        android:id="@+id/review_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/review_title"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_toStartOf="@+id/review_rating_full"
        android:layout_toLeftOf="@+id/review_rating_full"
        android:text="@string/review_rating_ph"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/review_rating_full"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/review_title"
        android:layout_alignRight="@+id/review_title"
        android:layout_alignTop="@+id/review_rating"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:text="@string/rest_rating_full" />

    <TextView
        android:id="@+id/review_rating_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/review_rating"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_toStartOf="@+id/review_rating"
        android:layout_toLeftOf="@+id/review_rating"
        android:text="@string/review_rating_title" />

    <TextView
        android:id="@+id/review_datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/review_fullname"
        android:layout_alignStart="@+id/review_fullname"
        android:layout_alignLeft="@+id/review_fullname"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="5dp"
        android:text="@string/review_datetime_ph"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/review_content"
        android:layout_width="364dp"
        android:layout_height="165dp"
        android:layout_below="@+id/review_datetime"
        android:layout_alignStart="@+id/review_datetime"
        android:layout_alignLeft="@+id/review_datetime"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/review_content_ph" />

</RelativeLayout>
